<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appBarDetailLinear"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/your_stats_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_margin="@dimen/text_margin"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/your_stats" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:background="@android:color/transparent"
            android:layout_margin="@dimen/text_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:enabled="false"
            android:inputType="text"
            android:hint="@string/username" />

        <ImageButton
            android:id="@+id/editUsername"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_margin="@dimen/text_margin"
            android:layout_gravity="center|end"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_edit"
            android:background="@null"
            android:contentDescription="@string/edit_username" />

        <ImageButton
            android:id="@+id/cancelUsername"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center|end"
            android:layout_margin="@dimen/text_margin"
            android:background="@null"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/cancel_username_edit" />

    </LinearLayout>

<GridLayout

    android:id="@+id/statsAppBarGrid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"

    android:orientation="vertical">



    <TextView
        android:id="@+id/run_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:layout_margin="@dimen/text_margin"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/runs"
        android:layout_column="0"
        android:layout_row="1"/>

    <TextView
        android:id="@+id/run_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:layout_margin="@dimen/text_margin"
        android:layout_gravity="center"
        android:hint="@string/zero_hint"
        android:textAlignment="center"
        android:layout_column="0"
        android:layout_row="2"
        />

    <TextView
        android:id="@+id/km_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:layout_margin="@dimen/text_margin"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/km"
        android:layout_column="1"
        android:layout_row="1"/>

    <TextView
        android:id="@+id/km_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:layout_margin="@dimen/text_margin"
        android:layout_gravity="center"
        android:hint="@string/distance_hint"
        android:textAlignment="center"
        android:layout_column="1"
        android:layout_row="2"
        />

    <TextView
        android:id="@+id/time_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:layout_margin="@dimen/text_margin"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/time_app_bar"
        android:layout_column="2"
        android:layout_row="1"/>

    <TextView
        android:id="@+id/time_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:layout_margin="@dimen/text_margin"
        android:layout_gravity="center"
        android:hint="@string/duration_hint"
        android:textAlignment="center"
        android:layout_column="2"
        android:layout_row="2"
        />

    <TextView
        android:id="@+id/speed_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:layout_margin="@dimen/text_margin"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/speed_avg_stats_bar"
        android:layout_column="3"
        android:layout_row="1"/>

    <TextView
        android:id="@+id/speed_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:layout_margin="@dimen/text_margin"
        android:layout_gravity="center"
        android:hint="@string/speed_hint"
        android:textAlignment="center"
        android:layout_column="3"
        android:layout_row="2"
        />

</GridLayout>
</LinearLayout>