<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/CustomCardViewStyle"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:longClickable="true">

    <android.support.v7.widget.GridLayout xmlns:grid="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/data"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            grid:layout_column="0"
            grid:layout_columnSpan="3"
            grid:layout_row="0" />

        <!-- DURATION -->
        <TextView
            android:id="@+id/durationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/run_duration"
            grid:layout_column="0"
            grid:layout_gravity="start"
            grid:layout_row="1" />

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/duration_hint"
            android:textAlignment="textEnd"
            grid:layout_column="1"
            grid:layout_gravity="end"
            grid:layout_row="1" />

        <TextView
            android:id="@+id/durationMetricLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/duration_metric"
            grid:layout_column="2"
            grid:layout_gravity="center_horizontal"
            grid:layout_row="1" />

        <!-- END DURATION -->

        <!-- DISTANCE -->
        <TextView
            android:id="@+id/distanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/run_distance"
            grid:layout_column="0"
            grid:layout_gravity="start"
            grid:layout_row="2" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/distance_hint"
            android:textAlignment="textEnd"
            grid:layout_column="1"
            grid:layout_gravity="end"
            grid:layout_row="2" />

        <TextView
            android:id="@+id/distanceMetricLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/distance_metric"
            grid:layout_column="2"
            grid:layout_gravity="center_horizontal"
            grid:layout_row="2" />

        <!-- END DISTANCE -->

        <!-- SPEED -->
        <TextView
            android:id="@+id/speedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/run_speed"
            grid:layout_column="0"
            grid:layout_gravity="start"
            grid:layout_row="3" />

        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/speed_hint"
            android:textAlignment="textEnd"
            grid:layout_column="1"
            grid:layout_gravity="end"
            grid:layout_row="3" />

        <TextView
            android:id="@+id/speedMetricLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/speed_metric"
            grid:layout_column="2"
            grid:layout_gravity="center_horizontal"
            grid:layout_row="3" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/mapButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:elevation="@dimen/fab_elevation"
            android:focusable="true"
            android:scaleType="center"
            card_view:backgroundTint="@null"
            card_view:srcCompat="@drawable/ic_map_icon"
            grid:layout_column="3"
            grid:layout_gravity="center_vertical"
            grid:layout_row="1"
            grid:layout_rowSpan="3" />


        <!-- END SPEED -->

    </android.support.v7.widget.GridLayout>

</android.support.v7.widget.CardView>