<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomCardViewStyle"
        android:layout_marginTop="30dp"
        card_view:cardBackgroundColor="@color/cardViewBackground">

        <android.support.v7.widget.GridLayout xmlns:grid="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <!-- DISTANCE -->

            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/run_distance"
                grid:layout_column="0"
                grid:layout_gravity="start"
                grid:layout_row="0" />

            <TextView
                android:id="@+id/distanceTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:hint="@string/distance_hint"
                android:textAlignment="textEnd"
                grid:layout_column="1"
                grid:layout_gravity="end"
                grid:layout_row="0" />

            <TextView
                android:id="@+id/distanceMetricLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/distance_metric"
                grid:layout_column="2"
                grid:layout_gravity="center_horizontal"
                grid:layout_row="0" />
            <!-- END DISTANCE -->

            <!-- SPEED -->
            <TextView
                android:id="@+id/speedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/run_speed"
                grid:layout_column="0"
                grid:layout_gravity="start"
                grid:layout_row="1" />

            <TextView
                android:id="@+id/speedTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:hint="@string/speed_hint"
                android:textAlignment="textEnd"
                grid:layout_column="1"
                grid:layout_gravity="end"
                grid:layout_row="1" />

            <TextView
                android:id="@+id/speedMetricLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/speed_metric"
                grid:layout_column="2"
                grid:layout_gravity="center_horizontal"
                grid:layout_row="1" />
            <!-- END SPEED -->


        </android.support.v7.widget.GridLayout>

    </android.support.v7.widget.CardView>

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="4dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintVertical_bias="0.148" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buttonRun"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/text_margin"
        android:clickable="true"
        android:elevation="@dimen/fab_elevation"
        android:focusable="true"
        android:scaleType="center"
        app:backgroundTint="@null"
        app:srcCompat="@drawable/ic_run_icon"
        android:layout_gravity="end"/>


</LinearLayout>